# ch-rzl

./: .gitignore  Cargo.toml  README.md  ease.html  hold.html  index.html  mixAudio.py  morimoriatsushi0IN.json  recorder.py
css/: style.css
js/: drawCoverPage.js  ease.js  format.js  formatCheck.js  formatOld.js  hyperOSmsg.js  main.js  main1.js  popup.js  screenShort.js  setting.js
src/: audio_mixer.rs  ffmpeg.rs  main.rs
